Separate state and command descriptions for locks (#47)
* Separate state and command descriptions for locks

I had to use a DynamicStateDescriptionProvider instead of just putting
the command description on the ChannelType, since I ran into serialization
issues with the AbstractStorageBasedTypeProvider.

Signed-off-by: Cody Cutrer <cody@cutrer.us>

* Method renaming

* Restore setting undef to channels when disposing

---------

Signed-off-by: Cody Cutrer <cody@cutrer.us>
Co-authored-by: Arne Seime <arne.seime@gmail.com>